--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,7 +14,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - ng build 
+      - ng build --verbose=true 
   post_build:
      commands:
       - aws s3 cp dist s3://${S3_BUCKET} --recursive
