--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,5 +22,11 @@ phases:
 artifacts:
   files:
       - '**/*'
-  base-directory: 'dist*'
-  discard-paths: yes
+      base-directory: 'dist*'
+      discard-paths: yes
+      - 'appspec.yml'
+      - 'scripts/install_dependencies.sh'
+      - 'scripts/start_server.sh'
+      - 'scripts/stop_server.sh'
+      - 'scripts/basic_health_check.sh'
+  
