--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,7 +21,7 @@ phases:
       - echo Build completed on `date`
 artifacts:
   files:
-      - 'dist*/**/*'
+      - 'target/dist*'
       # base-directory: 'dist*'
       - 'appspec.yml'
       - 'scripts/install_dependencies.sh'
